# anu_project

./: .cursorrules  01_check_safety.py  02_check_relevancy.py  03_reducers.py  04_add_messages.py  05_call_gemini.py  06_call_gemini_structured_op.py  07_stateless_echo.py  07_stateless_echo_w_error.py  08_stateless_echo.py  09_echo.py  10_call_gemini_using_langchain.py  11_echo_with_lc.py  12_tool_calling.py  13_echo_w_tool.py  14_echo_w_streaming.py  15_echo_w_summarization.py  16_echo_w_web_search.py  17_echo_w_user_preference.py  Chat_echo.db  RAG_tutorial.excalidraw  graph-sqlite-saver.py  inquira_agent.py  instructions.md  interview.md  langgraph.json  lc.excalidraw  main.py  project_ideas.md  prompts.py  pyproject.toml  questions_to_ask.md  resources.md  test.excalidraw  test.py  tools.py  user_preference_methods.md
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
excalidraw/: RAG_tutorial.excalidraw  cross_encoder.excalidraw  echo_w_summarization.excalidraw
text_data/: 01_news.txt
